style.css
body {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  padding: 0;
  margin: 0;
  font-size: 16px;
}
#header {
  margin-top: 20px;
  margin-bottom: 20px;
}
#teaser {
  height: 575px;
  padding-top: 10px;
  padding-bottom: 40px;
  padding-left: 3px;
  padding-right: 3px;
  background-color:#fff;
  position: relative;
  overflow: hidden;
  color: black;
  font-size: 16px;
  text-align: center;
}
figure {
  text-align: center;
}
figure img {
  vertical-align: top;
}
figure figcaption {
  padding-top: 5px;
  text-align: center;
}
button {
  width: 150px;
}
h1 {
  font-size: 30px;
  font-weight: 300;
  text-align: center;
}
h2 {
  font-size: 25px;
  font-weight: 300;
}
.lhead {
  font-weight: normal;
  margin-top: 5px;
}
.litem {
  margin-top: 5px;
}
#footer {
  height: 250px;
  padding-top: 50px;
  text-align: center;
  position: relative;
}
.instructorphoto {
  width: 115px;
  height: 115px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto 10px;
}
.instructorphoto img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  display: block;
}
/* saba.jpg: focal point — higher % = more right; lower second % = more “up” in frame */
.instructorphoto-saba img {
  object-position: 65% 28%;
}
.instructor {
  display: inline-block;
  width: 140px;
  text-align: center;
  margin-right: 30px;
  margin-bottom: 10px;
}

/* Course assistants row: center photo + name + office hours in each column */
.course-assistants .instructor {
  margin-left: auto;
  margin-right: auto;
  display: block;
  width: auto;
  max-width: 100%;
}
.course-assistants .office-hours {
  text-align: center;
  width: 100%;
  padding: 0 8px;
  box-sizing: border-box;
}
.course-assistants .instructor-name {
  white-space: nowrap;
  display: inline-block;
}
.sec {
  margin-bottom: 10px;
  padding-top: 5px;
  padding-bottom: 20px;
}
.tt {
  color: #060;
  display: inline-block;
}

#inputlayer {
  width: 65px;
}
.layer {
  width: 35px;
  display: inline-block;
  vertical-align: middle;
  margin-left: 10px;
  margin-bottom: 5px;
}
.actmap {
  display: block;
  border: 2px solid #FFF;
}
#convnetvis {
  text-align: center;
}
#probsdiv {

}
.pp {
  color: white;
  text-align: left;
  padding: 5px;
  height: 32px;
  margin: 2px;
  background-color: rgb(85,187,85);
  overflow: visible !important;
}

#convask {
  position: absolute;
  top: 360px;
  right: 16px;
  color: white;
  font-size: 25px;
  cursor: pointer;
}
#explain {
  display: none;
  background-color: #FF9;
  border-radius: 10px;
  margin: 10px;
  padding: 10px;
}
.qq {
  color: #060;
}
.qa {
  font-style: italic;
}
.qqa {
  margin-bottom: 20px;
}
.spanh {
  font-weight: normal;
}
.sechighlight {
  background-color: #f7f6f1;
}
#coursedesc {
  text-align: justify;
}
#covidwarning {
  text-align: justify;
}
#attendance {
  text-align: justify;
}
#honorcodedesc {
  text-align: justify;
}
#accomodationdesc {
  text-align: justify;
}
#footermsg {
  color: #333;
  margin: 20px;
}
#classicons {
  position: absolute;
  bottom: 20px;
  right: 20px;
}

